--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #1f1f1f;
-  color: #fff;
+  color: #a79595;
   text-align: center;
   padding: 20px;
 }
